syntax = "proto3";

package tripsphere.review.v1;

option go_package = "tripsphere/review/v1";
option java_multiple_files = true;
option java_package = "org.tripsphere.review.v1";

service ReviewService {
  rpc CreateReview(CreateReviewRequest) returns (CreateReviewResponse);
  rpc UpdateReview(UpdateReviewRequest) returns (UpdateReviewResponse);
  rpc DeleteReview(DeleteReviewRequest) returns (DeleteReviewResponse);
  rpc GetReviewByTargetID(GetReviewByTargetIDRequest) returns (GetReviewByTargetIDResponse);
  rpc GetReviewByTargetIDWithCursor(GetReviewByTargetIDWithCursorRequest) returns (GetReviewByTargetIDWithCursorResponse);
}

message GetReviewByTargetIDWithCursorRequest {
  string target_type = 1;
  string target_id = 2;
  string cursor = 3;
  int64 limit = 4;
}

message GetReviewByTargetIDWithCursorResponse {
  repeated Review reviews = 1;
  int64 total_reviews = 2;
  bool status = 3;
  string next_cursor = 4;
}

message CreateReviewRequest {
  string user_id = 1;
  string target_type = 2;
  string target_id = 3;
  int64 rating = 4;
  string text = 5;
  repeated string images = 6;
}

message CreateReviewResponse {
  string id = 1;
  bool status = 2;
}

message UpdateReviewRequest {
  string id = 1;
  int64 rating = 2;
  string text = 3;
  repeated string images = 4;
}

message UpdateReviewResponse {
  bool status = 1;
}

message DeleteReviewRequest {
  string id = 1;
}

message DeleteReviewResponse {
  bool status = 1;
}

message GetReviewByTargetIDRequest {
  string target_type = 1;
  string target_id = 2;
  int64 page_number = 3;
  int64 page_size = 4;
}

message GetReviewByTargetIDResponse {
  repeated Review reviews = 1;
  int64 total_reviews = 2;
  bool status = 3;
}

message Review {
  string id = 1;
  string user_id = 2;
  string target_type = 3;
  string target_id = 4;
  int64 rating = 5;
  string text = 6;
  repeated string images = 7;
  int64 created_at = 8;
  int64 updated_at = 9;
}
